@@ -4,4 +4,9 @@ license = Perl_5
 copyright_holder = Torsten Raudssus
 copyright_year   = 2012
 
+[Prereqs]
+Moose = 0
+Dist::Zilla = 4.300006
+CPAN::Uploader = 0.103000
+
 [@GETTY]
