@@ -1,0 +1,6 @@
+package Dist::Zilla::Stash::DUKGO;
+
+use Moose;
+extends 'Dist::Zilla::Stash::PAUSE';
+
+1;
