@@ -1,3 +1,4 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	- First working version of plugin
